Fix copy button for code not showing up

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -386,10 +386,6 @@
     background: transparent;
   }
 
-  .markup__75297 code {
-    backdrop-filter: blur(15px);
-  }
-
   .container_f369db {
     background: transparent;
   }
